--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --ignore-watch node_modules --transpile-only src/server.ts"
+    "dev": "tsnd --ignore-watch node_modules --transpile-only src/server.ts",
+    "populate-database": "ts-node seed/populateDatabase.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
+    "axios": "^0.27.2",
     "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.23",
+    "prisma": "^4.4.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
