--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "sourceMap": true,
+    "outDir": "dist",
+    "lib": ["esnext"],
     "esModuleInterop": true
   }
 }
