--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "dev": "tsnd --ignore-watch node_modules --transpile-only src/server.ts",
     "populate-database": "ts-node seed/populateDatabase.ts"
   },
@@ -14,6 +15,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.4",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.23",
     "prisma": "^4.4.0",
